# raylib_cmake_template

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
